# AML-project

./: .gitignore  EBM_LogReg_hyperparametertuning.py  EDA.ipynb  README.md  pyproject.toml
Schriftliche Abgabe/: main.tex
Schriftliche_Abgabe/: main.tex  sample.bib
models/: ebm_optuna_learning_rate.joblib
src/: EBM_LR_appendix_plots.ipynb  EBM_LogReg_hyperparametertuning.py  EDA_interpretML.ipynb  NAM_hyperparametertuning.py  NAM_testing.ipynb  Train_Nam.ipynb  data_cleaning.py
