[tool.poetry]
name = "advanced machine learning projekt"
version = "0.1.0"
description = ""
authors = ["Janik Königshofer <janik@koenigshofer-hh.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
interpret = "^0.4.4"
openpyxl = "^3.1.2"
imbalanced-learn = "^0.11.0"
nam = "^0.0.3"
tensorboard = "^2.14.0"
optuna = "^3.3.0"
mysqlclient = "^2.2.0"
ray = {extras = ["tune"], version = "^2.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
